--- a/website/index.html
+++ b/website/index.html
@@ -41,9 +41,11 @@
 				<div id="DetailResume">
 					<div>
 						<ul>
-							<li>年齡：22</li>
+							<li>姓名：程建睿</li>
 							<li>性別：男</li>
-							<li>役別：海軍(104/08/27~104/07/31)</li>
+							<li>年齡：22</li>
+							<li>役別：海軍(104/08/27~104/07/31)</li>	
+							<li>聯絡方式：ray247k@gmail.com</li>
 							<hr>
 							<li>學歷：國立虎尾科技大學資訊管理系(100~104)</li>
 							<li>專題：利用XOOPS建置資互動平台</li>
